# vibecheck

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  smoke_test.py  start.sh
src/vibecheck/: main.py
src/vibecheck/api/: health.py  profile.py
src/vibecheck/core/: config.py  deps.py  rate_limit.py  share_cache.py
src/vibecheck/schemas/: profile.py
src/vibecheck/services/: _rss_base.py  agent.py  bluesky_scraper.py  devto_scraper.py  github_scraper.py  goodreads_scraper.py  habr_scraper.py  hackernews_scraper.py  instagram_scraper.py  letterboxd_scraper.py  mastodon_scraper.py  pikabu_scraper.py  profile_analyzer.py  reddit_scraper.py  steam_scraper.py  substack_scraper.py  telegram_scraper.py
src/vibecheck/static/: index.html  manifest.webmanifest  share.html  sw.js
tests/: test_escape.py  test_schemas.py  test_share_cache.py  test_velocity.py
