[project]
name = "vibecheck"
version = "0.1.0"
description = "Vibe analysis from public social profiles"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pydantic-ai>=0.1.0",
    "loguru>=0.7.0",
    "sse-starlette>=2.1.0",
    "curl-cffi>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibecheck"]
